# IRPI

./: CMakeLists.txt  Readme.md
cpp/src/: CMakeLists.txt
cpp/src/ClothSimulator/: CMakeLists.txt
cpp/src/ClothSimulator/AlgLib/: CMakeLists.txt
cpp/src/ClothSimulator/Taucs/: CMakeLists.txt
cpp/src/ClothSimulator/Taucs/cmake/: FindGFortranLibs.cmake
cpp/src/ClothSimulator/Taucs/taucs/: configure
cpp/src/ClothSimulator/Taucs/taucs/config/: darwin.mk  irix_cilk.mk  linux.mk  linux_intel.mk  solaris_cilk.mk
cpp/src/ClothSimulator/Taucs/taucs/configurator/: makefile.unix
cpp/src/ClothSimulator/Taucs/taucs/src/: taucs.h
cpp/src/ClothSimulator/inc/: ClothSimulator.hpp
cpp/src/ClothSimulator/src/: ClothSimulator.cpp  auglag.cpp  conf.cpp  dde.cpp  io.cpp  runphysics.cpp  timer.cpp  util.cpp  vectors.hpp
cpp/test/: CMakeLists.txt  ClothDataGen.cpp  always_passes.cpp  taucsLinksTest.cpp
python/: ClothSimWrapper.cpp  IRPIPy.cpp
